--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,8 @@ html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
+    font-family: 'Source Sans Pro', sans-serif;
+/*    font-family: 'Vesper Libre', serif;*/
 }
 
 /*
@@ -113,6 +115,8 @@ body {
   font-weight: 700;
   display: flex;
   justify-content: space-between;
+    align-items: center;
+
 }
 
 .div-1, .div-2, .div-3 {
@@ -123,19 +127,50 @@ body {
   background-color: #333333;
   height: 300px;
   width: 30%;
-  padding: 20px;
+/*  margin: 20px 0;
+  padding: 0 40px;*/
   display: flex;
   justify-content: center;
   align-items: center;
-  border-left: dashed;
-  border-right: dashed;
-  border-color: #2a2a2a;
-  border-width: 3px;
+ 
 }
 
+.social {
+  display: flex;
+  justify-content: space-around;
+  line-height: 1.5em;
+  padding-top: 50px;
+  font-size: 1.6em;
+}
 
+.heading-hello {
+  color: #fff;
+  display: flex;
+/*  justify-content: space-around;*/
+  align-items: left;
+  line-height: 1.5em;
+  height: 150px;
+  font-family: Source Sans Pro, sans-serif;
+  font-size: 3em;
+  font-weight: 700;
+  margin: 40px 0px;
+}
 
-
+.heading-description {
+  color: #fff;
+  display: block;
+/*  justify-content: space-around;*/
+  align-items: left;
+  line-height: 1.5em;
+  height: 150px;
+  font-family: Source Sans Pro, sans-serif;
+  font-size: 1em;
+  margin: 27px 0px;
+/*  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 1em;
+  margin-inline-end: 1em;*/
+}
 
 /* ==========================================================================
    Helper classes
